--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
     "web3": "^4.12.1",
     "web3-eth-ens": "^4.4.0"
   },
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "@types/jest": "^29.5.13",
     "@types/lru-cache": "^7.10.10",
     "@types/node": "^22.5.5",
     "@types/web3": "^1.2.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "web3": "^4.12.1",
